Completed a round of code issue cleanup